--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
     "react": "^18.2.0",
+    "react-date-picker": "^10.5.2",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.47.0",
