--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
+    "http": "^0.0.1-security",
     "react": "^18.2.0",
     "react-date-picker": "^10.5.2",
     "react-dom": "^18.2.0",
@@ -20,7 +21,11 @@
     "react-hook-form": "^7.47.0",
     "react-range-slider-input": "^3.0.7",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "simple-peer": "^9.11.1",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
