--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "react-hook-form": "^7.47.0",
     "react-range-slider-input": "^3.0.7",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.17.0",
+    "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
